5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1723_2496.log
== SUBMITION (2019-05-08 18:07:49) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
	
-- EXECUTION TIME:
0.138621
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:09:30) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:09:57) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:10:03) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:10:59) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
0
	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:12:20) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
0
	
-- EXECUTION TIME:
0.12512
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:12:51) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
0
	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:13:06) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
0
	
-- EXECUTION TIME:
0.15074
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:13:07) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
0
	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:13:14) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
0
	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:13:52) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:15:21) 
-- CODE:
cont = 0
soma = 0
x = 0

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.212112
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:15:22) 
-- CODE:
cont = 0
soma = 0
x = 0

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.107374
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:15:23) 
-- CODE:
cont = 0
soma = 0
x = 0

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:16:06) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont - 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.194337
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:16:11) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:16:21) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:17:46) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >= - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.183737
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:17:48) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >= - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.112277
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:17:55) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >= - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.147373
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:17:56) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >= - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:17:58) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >= - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:18:01) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >= - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:18:04) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >= - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.247245
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:18:05) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >= - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.344897
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:18:09) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.226787
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:18:11) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:18:15) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >= - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.150909
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:18:28) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >= - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:19:16) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >= - 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:19:24) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >= 1 1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.205943
-- ERROR:
  File "/home/codebench/codes/1723/2496/main.py", line 5
    while(x >= 1 1):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:19:28) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >=  1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.161868
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:19:29) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >=  1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:19:32) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >=  1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.120352
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:19:35) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >  1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.23689
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:19:36) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >  1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.169827
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:19:45) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > 0):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.130063
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:19:53) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >= 0):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.278532
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:20:16) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x >= -1):
	soma =  soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.212033
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:23:07) 
-- CODE:

soma = 0
x = int(input("insira o numero:"))

while(x >= -1):
	soma =  soma + x
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.159793
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:23:08) 
-- CODE:

soma = 0
x = int(input("insira o numero:"))

while(x >= -1):
	soma =  soma + x
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:23:25) 
-- CODE:

soma = 0
x = int(input("insira o numero:"))

while(x >= 0):
	soma =  soma + x
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- EXECUTION TIME:
0.184602
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:23:27) 
-- CODE:

soma = 0
x = int(input("insira o numero:"))

while(x >= 0):
	soma =  soma + x
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:23:33) 
-- CODE:

soma = 0
x = int(input("insira o numero:"))

while(x >= 0):
	soma =  soma + x
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:25:13) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))


-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:25:19) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))


-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:25:29) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))


-- EXECUTION TIME:
0.207949
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:27:28) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > -1):
	soma = soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:27:58) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > -1):
	soma = soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:28:34) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > -1):
	soma = soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:28:41) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > -1):
	soma = soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.111887
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
Entrada invalida
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:29:02) 
-- CODE:

soma = 0
x = int(input("insira o numero:"))

while(x > -1):
	soma = soma + x

	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.181479
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
Entrada invalida
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:29:03) 
-- CODE:

soma = 0
x = int(input("insira o numero:"))

while(x > -1):
	soma = soma + x

	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.174131
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
Entrada invalida
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:29:14) 
-- CODE:

soma = 0
x = int(input("insira o numero:"))

while(x > -1):
	soma = soma + x
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:29:16) 
-- CODE:

soma = 0
x = int(input("insira o numero:"))

while(x > -1):
	soma = soma + x
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:29:32) 
-- CODE:

soma = 0
x = int(input("insira o numero:"))

while(x > -1):
	soma = soma + x
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:29:44) 
-- CODE:

soma = 0
x = int(input("insira o numero:"))

while(x > -1):
	soma = soma + x
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:29:56) 
-- CODE:

soma = 0
x = int(input("insira o numero:"))

while(x > -1):
	soma = soma + x
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:31:14) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > -1):
	soma = soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:31:16) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x > -1):
	soma = soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.183946
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
Entrada invalida
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:32:57) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x != -1):
	soma = soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:33:00) 
-- CODE:
cont = 0
soma = 0
x = int(input("insira o numero:"))

while(x != -1):
	soma = soma + x
	cont = cont + 1
	x = int(input("insira o numero:"))
if(x == -1):
	print(soma)

-- EXECUTION TIME:
0.138666
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
